--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "mammoth": "^1.9.1",
     "next": "^15.3.2",
     "next-auth": "4.24.11",
+    "openai": "^5.8.2",
     "prisma": "6.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
